package com.alkss.meight.core

object TestTags {
    const val NO_TRUCKS_AVAILABLE = "no_trucks_available"
    const val REFRESH_VEHICLES = "refresh_vehicles"

    const val DELIVERY_SCREEN = "delivery_screen"
    const val NO_INVOICES_AVAILABLE = "no_invoices_available"
    const val REFRESH_INVOICES = "refresh_invoices"

    const val INVOICE_DETAILS_SCREEN = "invoice_details_screen"
    const val DELIVERED_BUTTON = "delivered_button"
    const val NOT_DELIVERED_BUTTON = "not_delivered_button"
}